setup macos and asdf

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,8 +12,12 @@ bind l select-pane -R
 
 bind \\ set status
 
-set status off 
+set status off
 set-option -g status-position top
+
+# start index from 1 (normal is 0)
+set -g base-index 1
+setw -g pane-base-index 1
 
 # plugins manager
 # git clone https://github.com/tmux-plugins/tpm ~/.tmux/plugins/tpm
