--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -10,9 +10,9 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
-bind \\ set status
+# bind \\ set status
 
-set status off
+# set status off
 set-option -g status-position top
 
 # start index from 1 (normal is 0)
