--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -4,4 +4,4 @@ gui:
 git:
   paging:
     colorArg: always
-    pager: delta --paging=never
+    pager: delta --paging=never --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
