--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 font_family      JetBrainsMono Nerd Font Mono
-# font_family      FiraCode Nerd Font Mono
+# font_family      FiraCode Nerd Font Mono 
 # font_family      MesloLGSDZ Nerd Font Mono
 bold_font        auto
 italic_font      auto
@@ -21,7 +21,7 @@ bold_italic_font auto
 #: <https://sw.kovidgoyal.net/kitty/kittens/choose-fonts/#font-spec-
 #: syntax>.
 
-font_size 15.0
+font_size 12.0
 
 #: Font size (in pts).
 
@@ -812,7 +812,7 @@ enable_audio_bell no
 
 #: Window layout {{{
 
-# remember_window_size  yes
+remember_window_size  yes
 # initial_window_width  640
 # initial_window_height 400
 
@@ -914,7 +914,7 @@ enable_audio_bell no
 #: Fade the text in inactive windows by the specified amount (a number
 #: between zero and one, with zero being fully faded).
 
-# hide_window_decorations no
+hide_window_decorations no
 
 #: Hide the window decorations (title-bar and window borders) with
 #: yes. On macOS, titlebar-only and titlebar-and-corners can be used
@@ -1179,7 +1179,7 @@ enable_audio_bell no
 
 #: The foreground and background colors.
 
-background_opacity 0.9
+background_opacity 0.90
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -1758,7 +1758,7 @@ background_blur 75
 #: to use the background color of the currently active kitty window
 #: and finally you can use an arbitrary color, such as #12af59 or red.
 
-# macos_titlebar_color system
+macos_titlebar_color system
 
 #: The color of the kitty window's titlebar on macOS. A value of
 #: system means to use the default system color, light or dark can
