--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -43,6 +43,10 @@ $menu = wofi --show drun
 $large = hyprctl keyword general:gaps_out 30
 $center = hyprctl keyword general:gaps_out 30,500
 
+# xwayland {
+#     force_zero_scaling = true
+# }
+
 #################
 ### AUTOSTART ###
 #################
@@ -51,10 +55,14 @@ $center = hyprctl keyword general:gaps_out 30,500
 # Or execute your favorite apps at launch like this:
 
 # exec-once = $terminal
-# exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = nm-applet --indicator
+# exec-once = blueman-applet 
+# exec-once = gsettings set org.gnome.desktop.interface color-scheme "prefer-dark"
 exec-once = waybar
-exec-once = swww-daemon & /home/max/.config/hypr/set-wallpaper.sh
+exec-once = swww-daemon &
+exec-once = swaync
+
+exec = ~/.config/hypr/set-wallpaper.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -62,8 +70,8 @@ exec-once = swww-daemon & /home/max/.config/hypr/set-wallpaper.sh
 
 # See https://wiki.hyprland.org/Configuring/Environment-variables/
 
-env = XCURSOR_SIZE,16
-env = HYPRCURSOR_SIZE,16
+env = XCURSOR_SIZE,24
+env = HYPRCURSOR_SIZE,24
 
 
 #####################
@@ -74,7 +82,7 @@ env = HYPRCURSOR_SIZE,16
 
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
-    gaps_in = 12
+    gaps_in = 8
     gaps_out = 20,500,20,500
 
     border_size = 2
@@ -197,7 +205,7 @@ bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, Q, exec, $terminal
 bind = $mainMod, W, exec, $browser
 bind = $mainMod, A, exec, $large 
-bind = $mainMod, Z, exec, $center 
+bind = $mainMod, S, exec, $center 
 # bind = $mainMod, H, exec, ~/.local/bin/hyprland-monitor-toggle.sh 
 
 bind = $SUPER_SHIFT, l, exec, hyprlock
@@ -243,9 +251,10 @@ bind = $mainMod SHIFT, 8, movetoworkspace, 8
 bind = $mainMod SHIFT, 9, movetoworkspace, 9
 bind = $mainMod SHIFT, 0, movetoworkspace, 10
 
+
 # Example special workspace (scratchpad)
-bind = $mainMod, S, togglespecialworkspace, magic
-bind = $mainMod SHIFT, S, movetoworkspace, special:magic
+# bind = $mainMod, S, togglespecialworkspace, magic
+# bind = $mainMod SHIFT, S, movetoworkspace, special:magic
 
 # Scroll through existing workspaces with mainMod + scroll
 bind = $mainMod, mouse_down, workspace, e+1
