--- a/hypr/.config/hypr/hyprpaper.conf
+++ b/hypr/.config/hypr/hyprpaper.conf
@@ -1,2 +1,3 @@
-preload = ~/dotfiles/backgrounds/shaded_landscape.png
-wallpaper = , ~/dotfiles/backgrounds/shaded_landscape.png
+preload = ~/dotfiles/backgrounds/shaded_landscape.jpg
+wallpaper = ,~/dotfiles/backgrounds/shaded_landscape.jpg
+
