--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -38,8 +38,8 @@
   },
   "bluetooth": {
     "format": " {status}",
-    "format-connected": " {device_alias}",
-    "format-connected-battery": " {device_alias} {device_battery_percentage}%",
+    "format-connected": "",
+    "format-connected-battery": "",
     // "format-device-preference": [ "device1", "device2" ], // preference list deciding the displayed device
     "tooltip-format": "{controller_alias}\t{controller_address}\n\n{num_connections} connected",
     "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{num_connections} connected\n\n{device_enumerate}",
@@ -62,8 +62,8 @@
     "format-icons": {
       "default": "",
       "performance": "",
-      "balanced": "",
-      "power-saver": "",
+      "balanced": " ",
+      "power-saver": " ",
     },
   },
 }
