--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,3 +1,8 @@
 theme = catppuccin-mocha
 font-family = "JetBrainsMono Nerd Font Mono"
 font-size = 16
+
+background-opacity = 0.95
+background-blur-radius = 15
+
+macos-titlebar-style = tabs
