--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,3 +1,9 @@
 theme = catppuccin-mocha
+window-theme = ghostty
+
 font-family = "JetBrainsMono Nerd Font Mono"
-font-size = 16
+font-size = 13
+background-opacity = 0.90
+
+keybind = ctrl+a>d=toggle_window_decorations
+keybind = alt+w=close_window
