--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -13,7 +13,7 @@ monitor=DP-8,preferred,auto,1.25
 ### MY PROGRAMS ###
 ###################
 
-$terminal = kitty
+$terminal = ghostty
 $fileManager = nautilus
 $browser = firefox
 $menu = wofi --show drun
