--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -1,7 +1,6 @@
 gui:
   nerdFontsVersion: "3"
-
-git:
-  paging:
-    colorArg: always
-    pager: delta --paging=never --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
+# git:
+#   paging:
+#     colorArg: always
+#     pager: delta --paging=never --hyperlinks-file-link-format="lazygit-edit://{path}:{line}"
