--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -17,6 +17,9 @@
     "version": "2"
   },
 
+  "show_edit_predictions": false,
+
+  "icon_theme": "Catppuccin Mocha",
   "tab_size": 2,
   "ui_font_size": 15,
   "terminal": { "font_size": 14 },
@@ -40,18 +43,23 @@
     "enabled": false
   },
 
+  "tabs": {
+    "file_icons": true,
+    "git_status": false
+  },
+
+  "autosave": "on_focus_change",
+  //"autosave": { "after_delay": { "milliseconds": 1000}},
+
+  // "toolbar": {
+  //   "title": true,
+  //   "quick_actions": true
+  // },
+
   "theme": {
     "mode": "system",
     "light": "One Light",
     "dark": "Tokyo Night Storm"
-  },
-
-  "lsp": {
-    "elixir-ls": {
-      "settings": {
-        "projectDir": "./backend"
-      }
-    }
   },
 
   "languages": {
@@ -71,4 +79,10 @@
       }
     }
   }
+
+  // "experimental.theme_overrides": {
+  //   "background.appearance": "blurred",
+  //   "background": "#00000050",
+  //   "editor.background": "#00000050"
+  // }
 }
