--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,12 +1,15 @@
-theme = catppuccin-mocha
-window-theme = ghostty
+theme = tokyonight_moon
+#theme = catppuccin-mocha
+#window-theme = ghostty
 macos-titlebar-style = tabs
 
 font-family = "JetBrainsMono Nerd Font Mono"
+#font-family = "FiraCode Nerd Font Mono"
+
 font-size = 15
-background-opacity = 0.90
+adjust-cell-height=15%
+
+background-opacity = 0.95
 
 keybind = ctrl+a>d=toggle_window_decorations
 keybind = ctrl+a>g=toggle_quick_terminal
-#keybind = alt+w=close_window
-
