--- a/lazygit/.config/lazygit/config.yml
+++ b/lazygit/.config/lazygit/config.yml
@@ -1,5 +1,8 @@
 gui:
   nerdFontsVersion: "3"
+  scrollHeight: 2
+  showFileTree: false
+  # showRootItemInFileTree: false
 # git:
 #   paging:
 #     colorArg: always
