--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -9,24 +9,29 @@ font_size        12.0
 
 
 remember_window_size        no
-initial_window_width        950
-initial_window_height       500
+# initial_window_width        950
+# initial_window_height       500
 cursor_blink_interval       0.5
 cursor_stop_blinking_after  1
 scrollback_lines            2000
-wheel_scroll_min_lines      1
+wheel_scroll_min_lines      2
 enable_audio_bell           no
 window_padding_width        4
 dynamic_background_opacity  yes
 confirm_os_window_close     0
-selection_foreground        none
-selection_background        none
+# selection_foreground        none
+# selection_background        none
 
-hide_window_decorations     no
-background_opacity          0.9
-# background_blur             75 
+hide_window_decorations     yes
+background_opacity          0.90
+# background_blur             75
 
 macos_option_as_alt yes 
 
+map f11 toggle_fullscreen
+
+map ctrl+shift+equal change_font_size all +1.0
+map ctrl+shift+plus change_font_size all +1.0
+map ctrl+shift+minus change_font_size all -1.0
 
 include current-theme.conf
