--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -2,12 +2,14 @@
 $terminal = uwsm app -- alacritty
 $terminal2 = uwsm app -- kitty
 $browser = uwsm app -- chromium --new-window --ozone-platform=wayland
+$browser2 = uwsm app -- brave --new-window --ozone-platform=wayland
 $webapp = $browser --app
 
 bindd = SUPER, return, Terminal, exec, $terminal2
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
 bindd = SUPER SHIFT, F, File manager Alt, exec, $terminal -e yazi
 bindd = SUPER, B, Browser, exec, $browser
+bindd = SUPER SHIFT, B, Browser Alt, exec, $browser2
 bindd = SUPER, M, Music, exec, uwsm app -- spotify
 bindd = SUPER, N, Neovim, exec, $terminal -e nvim
 bindd = SUPER, T, Activity, exec, $terminal -e btop
