--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,17 +1,18 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 # font_family      JetBrainsMono Nerd Font Mono
 
-font_family      family="JetBrainsMono Nerd Font Mono"
-bold_font        auto
-italic_font      auto
-bold_italic_font auto
-font_size        12.0
-
+font_family         family="JetBrainsMono Nerd Font Mono"
+bold_font           auto
+italic_font         auto
+bold_italic_font    auto
+font_size           12.0
+adjust_line_height  110%
+# adjust_column_width 100%
 
 remember_window_size        no
 # initial_window_width        950
 # initial_window_height       500
-cursor_blink_interval       0.5
+# cursor_blink_interval       0.5
 cursor_stop_blinking_after  1
 scrollback_lines            2000
 wheel_scroll_min_lines      2
@@ -19,8 +20,8 @@ enable_audio_bell           no
 window_padding_width        4
 dynamic_background_opacity  yes
 confirm_os_window_close     0
-# selection_foreground        none
-# selection_background        none
+
+mouse_hide_wait             -3.0
 
 hide_window_decorations     yes
 background_opacity          0.90
@@ -29,9 +30,12 @@ background_opacity          0.90
 macos_option_as_alt yes 
 
 map f11 toggle_fullscreen
+map ctrl+shift+equal change_font_size all +0.5
+map ctrl+shift+plus change_font_size all +0.5
+map ctrl+shift+minus change_font_size all -0.5
 
-map ctrl+shift+equal change_font_size all +1.0
-map ctrl+shift+plus change_font_size all +1.0
-map ctrl+shift+minus change_font_size all -1.0
 
+# BEGIN_KITTY_THEME
+# Catppuccin-Mocha
 include current-theme.conf
+# END_KITTY_THEME
