--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -31,4 +31,4 @@ gestures {
 
 # Scroll faster in the terminal
 windowrule = scrolltouchpad 1.5, class:Alacritty
-windowrule = scrolltouchpad 2.0, class:Kitty
+windowrule = scrolltouchpad 1.5, class:^(?i)Kitty$
