--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -15,13 +15,15 @@ remember_window_size        no
 # cursor_blink_interval       0.5
 cursor_stop_blinking_after  1
 scrollback_lines            2000
-wheel_scroll_min_lines      5
+wheel_scroll_min_lines      2
 enable_audio_bell           no
 window_padding_width        4
 dynamic_background_opacity  yes
 confirm_os_window_close     0
 
 mouse_hide_wait             -3.0
+mouse_map scroll_up   no_modifiers scroll_line_up   5
+mouse_map scroll_down no_modifiers scroll_line_down 5
 
 hide_window_decorations     yes
 background_opacity          0.90
