--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -1,29 +1,31 @@
 # Application bindings
 $terminal = uwsm app -- alacritty
-$terminal2 = uwsm app -- kitty
-$browser = uwsm app -- chromium --new-window --ozone-platform=wayland
+$kitty    = uwsm app -- kitty
+$browser  = uwsm app -- chromium --new-window --ozone-platform=wayland
 $browser2 = uwsm app -- brave --new-window --ozone-platform=wayland
-$webapp = $browser --app
+$webapp   = $browser --app
 
-bindd = SUPER, return, Terminal, exec, $terminal2
+bindd = SUPER, return, Terminal, exec, $kitty
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER SHIFT, F, File manager Alt, exec, $terminal -e yazi
+bindd = SUPER SHIFT, F, File manager Alt, exec, $kitty -e yazi
 bindd = SUPER, B, Browser, exec, $browser
 bindd = SUPER SHIFT, B, Browser Alt, exec, $browser2
 bindd = SUPER, M, Music, exec, uwsm app -- spotify
-bindd = SUPER, N, Neovim, exec, $terminal -e nvim
+bindd = SUPER, N, Neovim, exec, $kitty -e nvim
 bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
-bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
+bindd = SUPER, D, Docker, exec, $kitty -e lazydocker
+# bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
 bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
+bindd = SUPER, G, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
 bindd = SUPER, A, ChatGPT, exec, $webapp="https://chatgpt.com"
 bindd = SUPER SHIFT, A, Grok, exec, $webapp="https://grok.com"
-bindd = SUPER, C, Calendar, exec, $webapp="https://app.hey.com/calendar/weeks/"
-bindd = SUPER, E, Email, exec, $webapp="https://app.hey.com"
+# bindd = SUPER, C, Calendar, exec, $webapp="https://app.hey.com/calendar/weeks/"
+# bindd = SUPER, E, Email, exec, $webapp="https://app.hey.com"
+bindd = SUPER, E, Email, exec, $webapp="https://gmail.com"
 bindd = SUPER, Y, YouTube, exec, $webapp="https://youtube.com/"
-bindd = SUPER SHIFT, G, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
-bindd = SUPER ALT, G, Google Messages, exec, $webapp="https://messages.google.com/web/conversations"
+# bindd = SUPER SHIFT, G, WhatsApp, exec, $webapp="https://web.whatsapp.com/"
+# bindd = SUPER ALT, G, Google Messages, exec, $webapp="https://messages.google.com/web/conversations"
 bindd = SUPER, X, X, exec, $webapp="https://x.com/"
 bindd = SUPER SHIFT, X, X Post, exec, $webapp="https://x.com/compose/post"
