--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -10,11 +10,14 @@ input {
   repeat_delay = 600
 
   # Increase sensitity for mouse/trackpack (default: 0)
-  sensitivity = 0.4
+  sensitivity = 0.3
+  accel_profile = adaptive
 
   touchpad {
     # Use natural (inverse) scrolling
     natural_scroll = true
+    disable_while_typing = true 
+    drag_lock = 0
 
     # Use two-finger clicks for right-click instead of lower-right corner
     # clickfinger_behavior = true
