--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -1,31 +1,30 @@
 # Application bindings
-$terminal = uwsm app -- alacritty
-$kitty    = uwsm app -- kitty
-$browser  = uwsm app -- chromium --new-window --ozone-platform=wayland
-$browser2 = uwsm app -- brave --new-window --ozone-platform=wayland
-$webapp   = $browser --app
+$terminal = uwsm app -- $TERMINAL
+$browser = omarchy-launch-browser
 
-bindd = SUPER, return, Terminal, exec, $kitty
+bindd = SUPER, return, Terminal, exec, $terminal --working-directory="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER, F, File manager, exec, uwsm app -- nautilus --new-window
-bindd = SUPER SHIFT, F, File manager Alt, exec, $kitty -e yazi
 bindd = SUPER, B, Browser, exec, $browser
-bindd = SUPER SHIFT, B, Browser Alt, exec, $browser2
-bindd = SUPER, M, Music, exec, uwsm app -- spotify
-bindd = SUPER, N, Neovim, exec, $kitty -e nvim
+bindd = SUPER SHIFT, B, Browser (private), exec, $browser --private
+bindd = SUPER, M, Music, exec, omarchy-launch-or-focus spotify
+bindd = SUPER, N, Editor, exec, omarchy-launch-editor
 bindd = SUPER, T, Activity, exec, $terminal -e btop
-bindd = SUPER, D, Docker, exec, $kitty -e lazydocker
-# bindd = SUPER, G, Signal, exec, uwsm app -- signal-desktop
-bindd = SUPER, O, Obsidian, exec, uwsm app -- obsidian -disable-gpu
+bindd = SUPER, D, Docker, exec, $terminal -e lazydocker
+bindd = SUPER, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
+bindd = SUPER, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
 bindd = SUPER, slash, Passwords, exec, uwsm app -- 1password
 
-bindd = SUPER, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
+# If your web app url contains #, type it as ## to prevent hyperland treat it as comments
 bindd = SUPER, A, ChatGPT, exec, omarchy-launch-webapp "https://chatgpt.com"
 bindd = SUPER SHIFT, A, Grok, exec, omarchy-launch-webapp "https://grok.com"
-# bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
-# bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
-bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://gmail.com"
-bindd = SUPER, Y, YouTube, exec, omarchy-launch-webapp "https://youtube.com/"
-# bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-webapp "https://web.whatsapp.com/"
-# bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-webapp "https://messages.google.com/web/conversations"
+bindd = SUPER, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.com/calendar/weeks/"
+bindd = SUPER, E, Email, exec, omarchy-launch-webapp "https://app.hey.com"
+bindd = SUPER, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
+bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
+bindd = SUPER ALT, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = SUPER, X, X, exec, omarchy-launch-webapp "https://x.com/"
 bindd = SUPER SHIFT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
+
+# Overwrite existing bindings, like putting Omarchy Menu on Super + Space
+# unbind = SUPER, SPACE
+# bindd = SUPER, SPACE, Omarchy menu, exec, omarchy-menu
