--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -1,23 +1,25 @@
 # Control your input devices
 # See https://wiki.hypr.land/Configuring/Variables/#input
 input {
-  # Use multiple keyboard layouts and switch between them with Alt + Space
+  # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   kb_layout = us,br
-  kb_options = grp:alts_toggle,caps:escape
+  kb_options = caps:escape,grp:alts_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 40
   repeat_delay = 600
 
+  # Start with numlock on by default
+  numlock_by_default = true
+
   # Increase sensitity for mouse/trackpack (default: 0)
+  # sensitivity = 0.5  
   sensitivity = 0.3
   accel_profile = adaptive
 
   touchpad {
     # Use natural (inverse) scrolling
     natural_scroll = true
-    disable_while_typing = true 
-    drag_lock = 0
 
     # Use two-finger clicks for right-click instead of lower-right corner
     # clickfinger_behavior = true
@@ -27,11 +29,9 @@ input {
   }
 }
 
-gestures {
-    workspace_swipe = on
-    workspace_swipe_fingers = 3
-}
-
 # Scroll faster in the terminal
-windowrule = scrolltouchpad 1.5, class:Alacritty
-windowrule = scrolltouchpad 1.5, class:^(?i)Kitty$
+windowrule = scrolltouchpad 1.5, tag:terminal
+
+# Enable touchpad gestures for changing workspaces
+# See https://wiki.hyprland.org/Configuring/Gestures/
+gesture = 3, horizontal, workspace
