--- a/lazygit/.config/lazygit/state.yml
+++ b/lazygit/.config/lazygit/state.yml
@@ -1,14 +1,10 @@
 lastupdatecheck: 0
 recentrepos:
-    - /Users/max/Projects/d4swing
+    - /home/max/dotfiles
+    - /home/max/dev/d4swing
+    - /home/max/.local/share/omarchy
 startuppopupversion: 5
-lastversion: 0.53.0
+didshowhunkstaginghint: false
+lastversion: 0.55.1
 customcommandshistory: []
 hidecommandlog: false
-ignorewhitespaceindiffview: false
-diffcontextsize: 3
-renamesimilaritythreshold: 50
-localbranchsortorder: recency
-remotebranchsortorder: alphabetical
-gitlogorder: topo-order
-gitlogshowgraph: always
