updates to omarchy 3

--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -2,6 +2,7 @@
 # See https://wiki.hypr.land/Configuring/Variables/#input
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
+  # kb_layout = us,dk,eu
   kb_layout = us,br
   kb_options = caps:escape,grp:alts_toggle
 
@@ -13,9 +14,7 @@ input {
   numlock_by_default = true
 
   # Increase sensitity for mouse/trackpack (default: 0)
-  # sensitivity = 0.5  
   sensitivity = 0.3
-  accel_profile = adaptive
 
   touchpad {
     # Use natural (inverse) scrolling
