--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -10,8 +10,12 @@ general {
     # layout = master
 }
 
+dwindle {
+  # single_window_aspect_ratio = 1 1
+}
+
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     # Use round window corners
-    rounding = 4
+    # rounding = 8
 }
