--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,43 +1,35 @@
-# vim:fileencoding=utf-8:foldmethod=marker
-# font_family      JetBrainsMono Nerd Font Mono
+include ~/.config/omarchy/current/theme/kitty.conf
 
-font_family         family="JetBrainsMono Nerd Font Mono"
-bold_font           auto
-italic_font         auto
-bold_italic_font    auto
-font_size           11.0
-adjust_line_height  110%
-# adjust_column_width 100%
+# Font
+font_family CaskaydiaMono Nerd Font
+bold_italic_font auto
+font_size        11.6
+adjust_line_height 115%
 
-remember_window_size        no
-# initial_window_width        950
-# initial_window_height       500
-# cursor_blink_interval       0.5
-cursor_stop_blinking_after  1
-scrollback_lines            2000
-wheel_scroll_min_lines      2
-enable_audio_bell           no
-window_padding_width        4
-dynamic_background_opacity  yes
-confirm_os_window_close     0
+# Window
+window_padding_width 14
+window_padding_height 14
+hide_window_decorations yes
+show_window_resize_notification no
+confirm_os_window_close 0
 
-mouse_hide_wait             -3.0
-mouse_map scroll_up   no_modifiers scroll_line_up   5
-mouse_map scroll_down no_modifiers scroll_line_down 5
+# Keybindings
+map F11 toggle_fullscreen
 
-hide_window_decorations     yes
-background_opacity          0.90
-# background_blur             75
+# Allow remote access
+single_instance yes
+allow_remote_control yes
 
-macos_option_as_alt yes 
+# Aesthetics
+cursor_shape block
+enable_audio_bell no
 
-map f11 toggle_fullscreen
-map ctrl+shift+equal change_font_size all +0.5
-map ctrl+shift+plus change_font_size all +0.5
-map ctrl+shift+minus change_font_size all -0.5
+# Minimal Tab bar styling 
+tab_bar_edge                bottom
+tab_bar_style               powerline
+tab_powerline_style         slanted
+tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 
-
-# BEGIN_KITTY_THEME
-# Catppuccin-Mocha
-include current-theme.conf
-# END_KITTY_THEME
+map ctrl+shift+minus change_font_size all -0.1
+map ctrl+shift+plus  change_font_size all +0.1
+map ctrl+shift+equal change_font_size all +0.1
