--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,10 +1,11 @@
 include ~/.config/omarchy/current/theme/kitty.conf
 
 # Font
-font_family CaskaydiaMono Nerd Font
+# font_family CaskaydiaMono Nerd Font
+font_family JetBrainsMono Nerd Font
 bold_italic_font auto
 font_size        11.6
-adjust_line_height 115%
+adjust_line_height 110%
 
 # Window
 window_padding_width 14
@@ -15,6 +16,8 @@ confirm_os_window_close 0
 
 # Keybindings
 map F11 toggle_fullscreen
+map ctrl+insert copy_to_clipboard
+map shift+insert paste_from_clipboard
 
 # Allow remote access
 single_instance yes
