--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -3,8 +3,9 @@
 input {
   # Use multiple keyboard layouts and switch between them with Left Alt + Right Alt
   # kb_layout = us,dk,eu
-  kb_layout = us,br
-  kb_options = caps:escape,grp:alts_toggle
+  kb_layout = us,us
+  kb_variant = basic,alt-intl
+  kb_options = compose:caps,grp:ctrls_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 40
@@ -14,11 +15,11 @@ input {
   numlock_by_default = true
 
   # Increase sensitity for mouse/trackpack (default: 0)
-  sensitivity = 0.3
+  sensitivity = -0.35
 
   touchpad {
     # Use natural (inverse) scrolling
-    natural_scroll = true
+    # natural_scroll = true
 
     # Use two-finger clicks for right-click instead of lower-right corner
     # clickfinger_behavior = true
@@ -28,9 +29,10 @@ input {
   }
 }
 
-# Scroll faster in the terminal
-windowrule = scrolltouchpad 1.5, tag:terminal
+# Scroll nicely in the terminal
+windowrule = scrolltouchpad 1.5, class:(Alacritty|kitty)
+windowrule = scrolltouchpad 0.2, class:com.mitchellh.ghostty
 
 # Enable touchpad gestures for changing workspaces
 # See https://wiki.hyprland.org/Configuring/Gestures/
-gesture = 3, horizontal, workspace
+# gesture = 3, horizontal, workspace
