--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -3,19 +3,23 @@
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
     # No gaps between windows
-    # gaps_in = 0
-    # gaps_out = 0
+    gaps_in = 12
+    gaps_out = 38,42
+    # border_size = 3
 
     # Use master layout instead of dwindle
     # layout = master
 }
 
-dwindle {
-  # single_window_aspect_ratio = 1 1
-}
-
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
     # Use round window corners
-    # rounding = 8
+   rounding = 2
 }
+
+# https://wiki.hypr.land/Configuring/Dwindle-Layout/
+dwindle {
+    # Avoid overly wide single-window layouts on wide screens
+    single_window_aspect_ratio = 4 3
+}
+
