--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -33,6 +33,6 @@ tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
 
-map ctrl+shift+minus change_font_size all -0.1
-map ctrl+shift+plus  change_font_size all +0.1
-map ctrl+shift+equal change_font_size all +0.1
+map ctrl+shift+minus change_font_size all -0.5
+map ctrl+shift+equal change_font_size all +0.5
+# map ctrl+shift+plus  change_font_size all +1.0
