--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -1,19 +1,25 @@
-theme = TokyoNight Storm
-#theme = catppuccin-mocha
+# Dynamic theme colors
+config-file = ?"~/.config/omarchy/current/theme/ghostty.conf"
 
-window-theme = ghostty
-macos-titlebar-style = tabs
+# Font
+font-family = "JetBrainsMono Nerd Font"
+font-style = Regular
+font-size = 11.7
 
-# font-family = ""
-font-family = "JetBrainsMono Nerd Font Mono"
-# font-family = "JetBrainsMono Nerd Font Mono"
-font-size = 15
-font-thicken = true
-adjust-cell-height=2
+# Window
+adjust-cell-height = 5%
+window-padding-balance = true
+window-padding-x = 14
+window-padding-y = 14
+confirm-close-surface=false
+resize-overlay = never
 
-background-opacity = 0.98
-window-padding-x = 8,2
+# Cursor styling
+cursor-style = "block"
+cursor-style-blink = false
+shell-integration-features = no-cursor
 
-keybind = f10=toggle_window_decorations
+# Keyboard bindings
 keybind = f11=toggle_fullscreen
-keybind = cmd+s=text:\x13
+keybind = shift+insert=paste_from_clipboard
+keybind = control+insert=copy_to_clipboard
