--- a/hypr/.config/hypr/monitors.conf
+++ b/hypr/.config/hypr/monitors.conf
@@ -4,8 +4,12 @@
 # You must relaunch Hyprland after changing any envs (use Super+Esc, then Relaunch)
 
 # Optimized for retina-class 2x displays, like 13" 2.8K, 27" 5K, 32" 6K.
-env = GDK_SCALE,2
-monitor=,preferred,auto,1.8
+env = GDK_SCALE,1.5
+env = SDL_VIDEODRIVER='wayland,x11'
+
+monitor=,preferred,auto,1.333334
+monitor=DP-3,3840x2160@144,auto,1.5
+# monitor=HDMI-A-1,preferred,auto,1.3333334
 
 # Good compromise for 27" or 32" 4K monitors (but fractional!)
 # env = GDK_SCALE,1.75
