--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ lazyvim/.config/nvim/lazyvim.json
 zed/.config/zed/prompts/
 zed/.config/zed/embeddings/
 backgrounds/1275277520812.png
+hypr/.config/hypr/shaders
