--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,10 +1,12 @@
 include ~/.config/omarchy/current/theme/kitty.conf
 
+# background_opacity 0.6
 # Font
 # font_family CaskaydiaMono Nerd Font
 font_family JetBrainsMono Nerd Font
+
 bold_italic_font auto
-font_size        11.6
+font_size        11.2
 adjust_line_height 110%
 
 # Window
