--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -3,8 +3,12 @@ config-file = ?"~/.config/omarchy/current/theme/ghostty.conf"
 
 # Font
 font-family = "JetBrainsMono Nerd Font"
-font-style = Regular
-font-size = 11.7
+font-style = Medium
+font-size = 11.3
+
+font-thicken = true
+
+# cell-height = 1.05
 
 # Window
 adjust-cell-height = 5%
@@ -23,3 +27,10 @@ shell-integration-features = no-cursor
 keybind = f11=toggle_fullscreen
 keybind = shift+insert=paste_from_clipboard
 keybind = control+insert=copy_to_clipboard
+keybind = super+control+shift+alt+arrow_down=resize_split:down,100
+keybind = super+control+shift+alt+arrow_up=resize_split:up,100
+keybind = super+control+shift+alt+arrow_left=resize_split:left,100
+keybind = super+control+shift+alt+arrow_right=resize_split:right,100
+
+# Slowdown mouse scrolling
+mouse-scroll-multiplier = 0.95
