--- a/hypr/.config/hypr/looknfeel.conf
+++ b/hypr/.config/hypr/looknfeel.conf
@@ -15,6 +15,17 @@ general {
 decoration {
     # Use round window corners
    rounding = 2
+
+   # blur {
+   #    enabled = true
+   #    size = 3
+   #    passes = 5
+   #    ignore_opacity = true
+   #    noise = 0.02
+   #    contrast = 0.89
+   #    xray = false
+   #    new_optimizations = true
+   #  }
 }
 
 # https://wiki.hypr.land/Configuring/Dwindle-Layout/
