--- a/hypr/.config/hypr/input.conf
+++ b/hypr/.config/hypr/input.conf
@@ -5,7 +5,7 @@ input {
   # kb_layout = us,dk,eu
   kb_layout = us,us
   kb_variant = basic,alt-intl
-  kb_options = compose:caps,grp:ctrls_toggle
+  kb_options = caps:escape,grp:ctrls_toggle
 
   # Change speed of keyboard repeat
   repeat_rate = 40
