--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -11,9 +11,8 @@ adjust_line_height 115%
 
 # Window
 window_padding_width 14
-window_padding_height 14
+# window_padding_height 14
 hide_window_decorations yes
-show_window_resize_notification no
 confirm_os_window_close 0
 
 # Keybindings
@@ -22,12 +21,16 @@ map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
 
 # Allow remote access
-single_instance yes
+# single_instance yes
 allow_remote_control yes
 
 # Aesthetics
-cursor_shape block
+background_opacity 1
 enable_audio_bell no
+
+cursor_shape block
+cursor_trail 10
+cursor_trail_decay 0.1 0.3
 
 # Minimal Tab bar styling 
 tab_bar_edge                bottom
