--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -4,6 +4,7 @@ $browser = omarchy-launch-browser
 
 bindd = SUPER, RETURN, Terminal, exec, $terminal --dir="$(omarchy-cmd-terminal-cwd)"
 bindd = SUPER SHIFT, F, File manager, exec, uwsm app -- nautilus --new-window
+bindd = SUPER SHIFT ALT, F, Yazi file manager, exec, omarchy-launch-tui yazi ~/Downloads/
 bindd = SUPER SHIFT, B, Browser, exec, $browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, $browser --private
 bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
