--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -27,6 +27,9 @@ bindd = SUPER SHIFT, L, D4 local, exec, omarchy-launch-or-focus-webapp D4swing "
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 # bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
+# control wiremix and bluetooth
+bindd = SUPER CTRL, A, Audio controls, exec, omarchy-launch-or-focus-tui wiremix
+bindd = SUPER CTRL, B, Bluetooth controls, exec, omarchy-launch-tui bluetui
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER SHIFT, SPACE
 # bindd = SUPER SHIFT, SPACE, Omarchy menu, exec, omarchy-menu
