--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@ lazyvim/.config/nvim/lazy-lock.json
 lazyvim/.config/nvim/lazyvim.json
 zed/.config/zed/prompts/
 zed/.config/zed/embeddings/
-backgrounds/1275277520812.png
+backgrounds/sexy*.*
 hypr/.config/hypr/shaders
