--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -2,12 +2,18 @@ include ~/.config/omarchy/current/theme/kitty.conf
 
 # background_opacity 0.6
 # Font
-# font_family CaskaydiaMono Nerd Font
 font_family JetBrainsMono Nerd Font
+# font_family Iosevka Nerd Font
+# font_family IosevkaTerm Nerd Font
 
 bold_italic_font auto
-font_size        11.2
+font_size        11.4
+
 adjust_line_height 115%
+# adjust_column_width -1
+
+# antialias true
+# hinting full
 
 # Window
 window_padding_width 14
@@ -19,6 +25,10 @@ confirm_os_window_close 0
 map F11 toggle_fullscreen
 map ctrl+insert copy_to_clipboard
 map shift+insert paste_from_clipboard
+
+map ctrl+shift+equal change_font_size all +0.5
+map ctrl+shift+minus change_font_size all -0.5
+map ctrl+shift+r load_config
 
 # Allow remote access
 # single_instance yes
@@ -37,7 +47,3 @@ tab_bar_edge                bottom
 tab_bar_style               powerline
 tab_powerline_style         slanted
 tab_title_template          {title}{' :{}:'.format(num_windows) if num_windows > 1 else ''}
-
-map ctrl+shift+minus change_font_size all -0.1
-map ctrl+shift+equal change_font_size all +0.1
-# map ctrl+shift+plus  change_font_size all +1.0
