--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -3,15 +3,12 @@ config-file = ?"~/.config/omarchy/current/theme/ghostty.conf"
 
 # Font
 font-family = "JetBrainsMono Nerd Font"
-font-style = Medium
-font-size = 11.3
-
-font-thicken = true
-
-# cell-height = 1.05
+font-style = "semibold"
+font-size = 11.5
+# font-thicken = true
 
 # Window
-adjust-cell-height = 5%
+adjust-cell-height = 10%
 window-padding-balance = true
 window-padding-x = 14
 window-padding-y = 14
@@ -31,6 +28,10 @@ keybind = super+control+shift+alt+arrow_down=resize_split:down,100
 keybind = super+control+shift+alt+arrow_up=resize_split:up,100
 keybind = super+control+shift+alt+arrow_left=resize_split:left,100
 keybind = super+control+shift+alt+arrow_right=resize_split:right,100
+
+keybind = control+equal=increase_font_size:0.5
+keybind = control++=increase_font_size:0.5
+keybind = control+-=decrease_font_size:0.5
 
 # Slowdown mouse scrolling
 mouse-scroll-multiplier = 0.95
