--- a/ghostty/.config/ghostty/config
+++ b/ghostty/.config/ghostty/config
@@ -3,7 +3,7 @@ config-file = ?"~/.config/omarchy/current/theme/ghostty.conf"
 
 # Font
 font-family = "JetBrainsMono Nerd Font"
-font-style = "semibold"
+font-style = "medium"
 font-size = 11.5
 # font-thicken = true
 
