--- a/hypr/.config/hypr/bindings.conf
+++ b/hypr/.config/hypr/bindings.conf
@@ -9,7 +9,7 @@ bindd = SUPER SHIFT, B, Browser, exec, $browser
 bindd = SUPER SHIFT ALT, B, Browser (private), exec, $browser --private
 bindd = SUPER SHIFT, M, Music, exec, omarchy-launch-or-focus spotify
 bindd = SUPER SHIFT, N, Editor, exec, omarchy-launch-editor
-bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
+# bindd = SUPER SHIFT, T, Activity, exec, omarchy-launch-tui btop
 bindd = SUPER SHIFT, D, Docker, exec, omarchy-launch-tui lazydocker
 # bindd = SUPER SHIFT, G, Signal, exec, omarchy-launch-or-focus signal "uwsm app -- signal-desktop"
 bindd = SUPER SHIFT, O, Obsidian, exec, omarchy-launch-or-focus obsidian "uwsm app -- obsidian -disable-gpu --enable-wayland-ime"
@@ -22,14 +22,14 @@ bindd = SUPER SHIFT, C, Calendar, exec, omarchy-launch-webapp "https://app.hey.c
 bindd = SUPER SHIFT, E, Email, exec, omarchy-launch-webapp "https://gmail.com"
 bindd = SUPER SHIFT, Y, YouTube, exec, omarchy-launch-or-focus-webapp YouTube "https://youtube.com/"
 bindd = SUPER SHIFT, G, WhatsApp, exec, omarchy-launch-or-focus-webapp WhatsApp "https://web.whatsapp.com/"
-bindd = SUPER SHIFT, L, D4 local, exec, omarchy-launch-or-focus-webapp D4swing "http://localhost:3000"
+# bindd = SUPER SHIFT, L, D4 local, exec, omarchy-launch-or-focus-webapp D4swing "http://localhost:3000"
 # bindd = SUPER SHIFT CTRL, G, Google Messages, exec, omarchy-launch-or-focus-webapp "Google Messages" "https://messages.google.com/web/conversations"
 bindd = SUPER SHIFT, X, X, exec, omarchy-launch-webapp "https://x.com/"
 # bindd = SUPER SHIFT ALT, X, X Post, exec, omarchy-launch-webapp "https://x.com/compose/post"
 
 # control wiremix and bluetooth
-bindd = SUPER CTRL, A, Audio controls, exec, omarchy-launch-or-focus-tui wiremix
-bindd = SUPER CTRL, B, Bluetooth controls, exec, omarchy-launch-tui bluetui
+# bindd = SUPER CTRL, A, Audio controls, exec, omarchy-launch-or-focus-tui wiremix
+# bindd = SUPER CTRL, B, Bluetooth controls, exec, omarchy-launch-tui bluetui
 # Overwrite existing bindings, like putting Omarchy Menu on Super + Space
 # unbind = SUPER SHIFT, SPACE
 # bindd = SUPER SHIFT, SPACE, Omarchy menu, exec, omarchy-menu
