--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,16 +1,16 @@
-include ~/.config/omarchy/current/theme/kitty.conf
+# include ~/.config/omarchy/current/theme/kitty.conf
+# include ./macchiato.conf
+include ./mocha.conf
 
 # background_opacity 0.6
 # Font
 font_family JetBrainsMono Nerd Font
-# font_family Iosevka Nerd Font
-# font_family IosevkaTerm Nerd Font
 
 bold_italic_font auto
-font_size        11.4
+font_size        11.3
 
 adjust_line_height 115%
-# adjust_column_width -1
+adjust_column_width 0
 
 # antialias true
 # hinting full
@@ -28,7 +28,7 @@ map shift+insert paste_from_clipboard
 
 map ctrl+shift+equal change_font_size all +0.5
 map ctrl+shift+minus change_font_size all -0.5
-map ctrl+shift+r load_config
+map ctrl+shift+, load_config_file
 
 # Allow remote access
 # single_instance yes
