--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -1,6 +1,6 @@
-# include ~/.config/omarchy/current/theme/kitty.conf
+include ~/.config/omarchy/current/theme/kitty.conf
 # include ./macchiato.conf
-include ./mocha.conf
+# include ./mocha.conf
 
 # background_opacity 0.6
 # Font
