--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -7,87 +7,93 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-  "agent": {
-    "inline_assistant_model": {
-      "provider": "anthropic",
-      "model": "claude-3-7-sonnet-latest"
-    },
-    "default_model": {
-      "provider": "anthropic",
-      "model": "claude-sonnet-4-latest"
-    },
-    "model_parameters": [],
-    "default_profile": "ask"
+  "collaboration_panel": {
+    "button": false
   },
-
-  "show_edit_predictions": false,
-
-  "icon_theme": "Colored Zed Icons Theme Dark",
-  "tab_size": 2,
-  "ui_font_size": 15,
-  "terminal": { "font_size": 14 },
-  "buffer_font_size": 15,
-  "buffer_font_family": "JetBrainsMono Nerd Font",
-  "buffer_line_height": { "custom": 1.45 },
-
-  "current_line_highlight": "gutter",
-
-  "vim_mode": false,
-  "show_completions_on_input": true,
-  "auto_signature_help": false,
-  "show_signature_help_after_edits": true,
-
-  "diagnostics": { "inline": { "enabled": true } },
-  "relative_line_numbers": true,
-
-  "git": {
-    "inline_blame": { "enabled": false }
+  "active_pane_modifiers": {
+    "border_size": 0.0
   },
-
-  "inlay_hints": {
-    "enabled": false
-  },
-
+  "bottom_dock_layout": "contained",
   "tabs": {
+    "close_position": "right",
     "file_icons": true,
     "git_status": false
   },
-
-  "autosave": "on_focus_change",
-  //"autosave": { "after_delay": { "milliseconds": 1000}},
-
-  // "toolbar": {
-  //   "title": true,
-  //   "quick_actions": true
-  // },
-
-  "theme": {
-    "mode": "system",
-    "light": "One Light",
-    "dark": "Tokyo Night Storm"
+  "icon_theme": "Colored Zed Icons Theme Dark",
+  "vim_mode": false,
+  "agent": {
+    "button": true,
+    "default_model": {
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-5-latest"
+    },
+    "model_parameters": []
   },
-
-  "languages": {
-    "TypeScript": {
-      "code_actions_on_format": {
-        "source.organizeImports": true
-      }
+  "ui_font_family": "Inter Variable",
+  "ui_font_weight": 400.0,
+  "git": {
+    "path_style": "file_name_first",
+    "branch_picker": {
+      "show_author_name": true
     },
-    "JavaScript": {
-      "code_actions_on_format": {
-        "source.organizeImports": true
-      }
+    "blame": {
+      "show_avatar": true
     },
-    "Svelte": {
-      "code_actions_on_format": {
-        "source.organizeImports": true
-      }
+    "inline_blame": {
+      "padding": 7,
+      "enabled": false
     }
-  }
-
-  // "experimental.theme_overrides": {
-  //   "background.appearance": "blurred",
-  //   "background": "#00000050",
-  //   "editor.background": "#00000090"
-  // }
+  },
+  "buffer_line_height": "comfortable",
+  "tab_bar": {
+    "show": true
+  },
+  "title_bar": {
+    "show_menus": false,
+    "show_onboarding_banner": true,
+    "show_project_items": true,
+    "show_branch_name": true,
+    "show_branch_icon": false
+  },
+  "terminal": {
+    "button": true
+  },
+  "status_bar": {
+    "active_language_button": true
+  },
+  "project_panel": {
+    "hide_hidden": false,
+    "entry_spacing": "standard",
+    "default_width": 230.0,
+    "dock": "left",
+    "button": true
+  },
+  "inlay_hints": {
+    "enabled": false
+  },
+  "indent_guides": {
+    "background_coloring": "disabled",
+    "coloring": "fixed",
+    "active_line_width": 1,
+    "line_width": 2
+  },
+  "hard_tabs": false,
+  "tab_size": 2,
+  "toolbar": {
+    "quick_actions": true,
+    "breadcrumbs": true
+  },
+  "minimap": {
+    "show": "never"
+  },
+  "relative_line_numbers": "disabled",
+  "show_wrap_guides": true,
+  "current_line_highlight": "gutter",
+  "agent_ui_font_size": 16.0,
+  "buffer_font_weight": 500.0,
+  "buffer_font_family": "JetBrainsMono Nerd Font",
+  "buffer_font_features": { "calt": true, "liga": true },
+  "ui_font_size": 16.0,
+  "buffer_font_size": 15.0,
+  "theme": "Catppuccin Macchiato"
 }
