--- a/kitty/.config/kitty/kitty.conf
+++ b/kitty/.config/kitty/kitty.conf
@@ -17,7 +17,7 @@ adjust_column_width -1
 
 # Window
 window_padding_width 14
-# window_padding_height 14
+window_padding_height 8
 hide_window_decorations yes
 confirm_os_window_close 0
 
