--- a/zed/.config/zed/settings.json
+++ b/zed/.config/zed/settings.json
@@ -22,6 +22,10 @@
   "icon_theme": "Colored Zed Icons Theme Dark",
   "vim_mode": false,
   "agent": {
+    "inline_assistant_model": {
+      "provider": "anthropic",
+      "model": "claude-sonnet-4-5-latest"
+    },
     "button": true,
     "default_model": {
       "provider": "anthropic",
